small edits to package and removed unused file

--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "tech-challenge",
   "version": "1.0.0",
   "description": "Easy tech challenge for Shine Solar",
-  "main": "app.js",
+  "main": "dist/app.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "build": "npx tsc",
@@ -12,14 +12,14 @@
   },
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/ShineSolar/tech-challenge.git"
+    "url": "git+https://github.com/zachfredricksen/tech-challenge.git"
   },
   "author": "Matt Pickett",
   "license": "ISC",
   "bugs": {
-    "url": "https://github.com/ShineSolar/tech-challenge/issues"
+    "url": "https://github.com/zachfredricksen/tech-challenge/issues"
   },
-  "homepage": "https://github.com/ShineSolar/tech-challenge#readme",
+  "homepage": "https://github.com/zachfredricksen/tech-challenge#readme",
   "dependencies": {
     "dotenv": "^16.0.1",
     "express": "^4.18.1",
